# inferno-homework

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: Error.py  Frequency.py  Normaliser.py  Parser.py  Sentence.py  Token.py  Tokeniser.py  Words.py
tests/: __init__.py
